refactor: OpenAPI-based generator and Maven Plugin Java 8 compatible
Signed-off-by: Marc Nuri <marc@marcnuri.com>